--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -29,7 +29,7 @@
                         </form>
                     </div>
                     <div class="col-12 col-lg-8">
-                        <p class="text-muted">Order History</p>
+                        <p class="text-muted mt-4 mt-lg-0">Order History</p>
                         <div class="order-history table-responsive">
                             <table class="table table-sm table-borderless">
                                 <thead>
