Build: added delivery_cost

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -10616,6 +10616,10 @@ body {
     height: 30px;
 }
 
+.alertbanner {
+    background-color: #FECF6E;
+}
+
 @media screen and (orientation: portrait){ /* Credit: https://stackoverflow.com/questions/43589507/how-can-you-have-bootstrap-responsiveness-based-on-screen-ratio-instead-of-scree */
     .masthead {
         padding: 25vh 0;
