--- a/basket/templates/basket/basket.html
+++ b/basket/templates/basket/basket.html
@@ -114,7 +114,7 @@
                                         <hr>
                                     {% endfor %}
                                     <div class="row">
-                                        <div class="col-4 my-auto">
+                                        <div class="col-12 col-sm-4 my-auto pb-2 pb-sm-0">
                                             <div class="product-text-two mx-auto mb-2 text-blue bold">Basket Total</div>
                                             {% if basket_total.total_price__sum != None %}
                                                 <div class="product-text-header bold">£{{ basket_total.total_price__sum|floatformat:"2" }}</div>
@@ -122,7 +122,7 @@
                                                 <div class="product-text-header bold">£0.00</div>
                                             {% endif %}
                                         </div>
-                                        <div class="col-8 my-auto">
+                                        <div class="col-12 col-sm-8 my-auto">
                                             {% if basket_total.total_price__sum != None  %}
                                                 <div class="row">
                                                     <div class="col-6">
