--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -32,6 +32,53 @@
                     <div class="text-center h-100 project">
                         <div class="d-flex h-100">
                             <div class="product-container w-100 mt-0 text-center text-xl-left">
+                                <div class="my-auto pl-0">
+                                    <div class="row">
+                                        <div class="col-6 col-sm-4">
+                                            <div class="product-text-two mx-auto mb-2 text-blue bold">
+                                                Basket <br class="d-none d-sm-block">Total
+                                            </div>
+                                            {% if basket_total.total_price__sum != None %}
+                                                <div class="product-text-two bold">
+                                                    £{{ basket_total.total_price__sum|floatformat:"2" }}
+                                                </div>
+                                            {% else %}
+                                                <div class="product-text-two bold">
+                                                    £0.00
+                                                </div>
+                                            {% endif %}
+                                        </div>
+                                        <div class="col-6 col-sm-4">
+                                            <div class="product-text-two mx-auto mb-2 text-lightblue bold">
+                                                Delivery <br class="d-none d-sm-block">Cost
+                                            </div>
+                                            {% if basket_total.total_price__sum != None and user.is_authenticated %}
+                                                <div class="product-text-two text-lightblue bold">
+                                                    £0.00
+                                                </div>
+                                            {% else %}
+                                                <div class="product-text-two text-lightblue bold">
+                                                    £{{ delivery_cost|floatformat:"2" }}
+                                                </div>
+                                            {% endif %}
+                                        </div>
+                                        <div class="col-12 col-sm-4 pt-3 pt-sm-0">
+                                            <div class="product-text-two mx-auto mb-2 text-blue bold">
+                                                Order <br class="d-none d-sm-block">Total
+                                            </div>
+                                            {% if basket_total.total_price__sum != None and user.is_authenticated %}
+                                                <div class="product-text-header bold">
+                                                    £{{ basket_total.total_price__sum|floatformat:"2" }}
+                                                </div>
+                                            {% else %}
+                                                <div class="product-text-header bold">
+                                                    £{{ grand_total|floatformat:"2" }}
+                                                </div>
+                                            {% endif %}
+                                        </div>
+                                    </div>
+                                </div>
+                                <hr>
                                 {% if basket_total.total_price__sum != None  %}
                                     <div class="product-text-three mx-auto flex-margin-b text-blue">
                                         The items below have been added to your basket...
@@ -41,112 +88,98 @@
                                         Your basket is empty.
                                     </div>
                                 {% endif %}
-                                    {% for basket in baskets %}
-                                        <div class="product-text-two mx-auto mb-2 text-blue bold">
-                                            {{ basket.category.title }}: {{ basket.name }}
-                                        </div>
-                                        {% for product in products %}
-                                            {% if product.name == basket.name and product.category|slugify == basket.category|slugify %}
-                                                <div class="product-text-three mx-auto mb-2 text-blue">
-                                                    {{ product.description }}
-                                                </div>
-                                                <div class="allergy-text text-lightblue">
-                                                    {% if product.allergies|slice:"0:1" == 'v' %}
-                                                        <i class="fas fa-carrot"></i> vegan 
-                                                    {% endif %}
-                                                    {% if product.allergies|slice:"1:2" == 'g' %}
-                                                        <i class="fas fa-leaf"></i> vegetarian 
-                                                    {% endif %}
-                                                    {% if product.allergies|slice:"2:3" == 'p' %}
-                                                        <i class="fas fa-fish"></i> pescetarian 
-                                                    {% endif %}
-                                                    {% if product.allergies|slice:"3:4" == 'a' %}
-                                                        <i class="fas fa-allergies"></i> allergy advice 
-                                                    {% endif %}
-                                                    {% if product.allergies|slice:"4:5" == 'h' %}
-                                                        <i class="fas fa-mitten"></i> can be served hot
-                                                    {% endif %}
-                                                </div>
-                                            {% endif %}
-                                        {% endfor %}
-                                        <br>
-                                        <div class="text-blue text-xs mb-2">
-                                            {% for option in options %}
-                                                {% if option.category|slugify == basket.category|slugify %}
-                                                    With the option:
+                                {% for basket in baskets %}
+                                    <div class="product-text-two mx-auto mb-2 text-blue bold">
+                                        {{ basket.category.title }}: {{ basket.name }}
+                                    </div>
+                                    {% for product in products %}
+                                        {% if product.name == basket.name and product.category|slugify == basket.category|slugify %}
+                                            <div class="product-text-three mx-auto mb-2 text-blue">
+                                                {{ product.description }}
+                                            </div>
+                                            <div class="allergy-text text-lightblue">
+                                                {% if product.allergies|slice:"0:1" == 'v' %}
+                                                    <i class="fas fa-carrot"></i> vegan 
                                                 {% endif %}
-                                            {% endfor %}
-                                            {% if basket.option == "selected-one" %}
-                                                {% for option in options %}
-                                                    {% if option.category|slugify == basket.category|slugify %}
-                                                        <span class="text-blue product-text-two mb-2 bold">
-                                                            {{ option.option1.title }}
-                                                        </span>
-                                                    {% endif %}
-                                                {% endfor %}
-                                            {% endif %}
-                                            {% if basket.option == "selected-two" %}
-                                                {% for option in options %}
-                                                    {% if option.category|slugify == basket.category|slugify %}
-                                                        <span class="text-blue product-text-two mb-2 bold">
-                                                            {{ option.option2.title }}
-                                                        </span>
-                                                    {% endif %}
-                                                {% endfor %}
-                                            {% endif %}
-                                            {% if basket.option == "selected-three" %}
-                                                {% for option in options %}
-                                                    {% if option.category|slugify == basket.category|slugify %}
-                                                        <span class="text-blue product-text-two mb-2 bold">
-                                                            {{ option.option3.title }}
-                                                        </span>
-                                                    {% endif %}
-                                                {% endfor %}
-                                            {% endif %}
-                                        </div>
-                                        <div class="text-blue text-xs mb-4">Number of servings:
-                                            <span id="servings" class="text-blue product-text-two mb-2 bold">
-                                                {{ basket.servings }}
-                                            </span>
-                                        </div>
-                                        <div class="row">
-                                            <div class="col-6 my-auto">
-                                                {% for product in products %}
-                                                    {% if product.name == basket.name and product.category|slugify == basket.category|slugify %}
-                                                        <div class="text-blue text-xs">
-                                                            per serving
-                                                        </div>
-                                                        <div class="product-text-two mt-1">
-                                                            £{{ product.price }}
-                                                        </div>
-                                                    {% endif %}
-                                                {% endfor %}
-                                            </div>
-                                            <div class="col-6 my-auto">
-                                                <div class="text-blue text-xs">
-                                                    Total price
-                                                </div>
-                                                <div class="product-text-two bold">
-                                                    £{{ basket.total_price }}
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <hr>
-                                    {% endfor %}
-                                    <div class="col-12 col-lg-4 my-auto pl-0">
-                                        <div class="product-text-two mx-auto mb-2 text-blue bold">
-                                            Basket Total
-                                        </div>
-                                        {% if basket_total.total_price__sum != None %}
-                                            <div class="product-text-header bold">
-                                                £{{ basket_total.total_price__sum|floatformat:"2" }}
-                                            </div>
-                                        {% else %}
-                                            <div class="product-text-header bold">
-                                                £0.00
+                                                {% if product.allergies|slice:"1:2" == 'g' %}
+                                                    <i class="fas fa-leaf"></i> vegetarian 
+                                                {% endif %}
+                                                {% if product.allergies|slice:"2:3" == 'p' %}
+                                                    <i class="fas fa-fish"></i> pescetarian 
+                                                {% endif %}
+                                                {% if product.allergies|slice:"3:4" == 'a' %}
+                                                    <i class="fas fa-allergies"></i> allergy advice 
+                                                {% endif %}
+                                                {% if product.allergies|slice:"4:5" == 'h' %}
+                                                    <i class="fas fa-mitten"></i> can be served hot
+                                                {% endif %}
                                             </div>
                                         {% endif %}
+                                    {% endfor %}
+                                    <br>
+                                    <div class="text-blue text-xs mb-2">
+                                        {% for option in options %}
+                                            {% if option.category|slugify == basket.category|slugify %}
+                                                With the option:
+                                            {% endif %}
+                                        {% endfor %}
+                                        {% if basket.option == "selected-one" %}
+                                            {% for option in options %}
+                                                {% if option.category|slugify == basket.category|slugify %}
+                                                    <span class="text-blue product-text-two mb-2 bold">
+                                                        {{ option.option1.title }}
+                                                    </span>
+                                                {% endif %}
+                                            {% endfor %}
+                                        {% endif %}
+                                        {% if basket.option == "selected-two" %}
+                                            {% for option in options %}
+                                                {% if option.category|slugify == basket.category|slugify %}
+                                                    <span class="text-blue product-text-two mb-2 bold">
+                                                        {{ option.option2.title }}
+                                                    </span>
+                                                {% endif %}
+                                            {% endfor %}
+                                        {% endif %}
+                                        {% if basket.option == "selected-three" %}
+                                            {% for option in options %}
+                                                {% if option.category|slugify == basket.category|slugify %}
+                                                    <span class="text-blue product-text-two mb-2 bold">
+                                                        {{ option.option3.title }}
+                                                    </span>
+                                                {% endif %}
+                                            {% endfor %}
+                                        {% endif %}
                                     </div>
+                                    <div class="text-blue text-xs mb-4">Number of servings:
+                                        <span id="servings" class="text-blue product-text-two mb-2 bold">
+                                            {{ basket.servings }}
+                                        </span>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-6 my-auto">
+                                            {% for product in products %}
+                                                {% if product.name == basket.name and product.category|slugify == basket.category|slugify %}
+                                                    <div class="text-blue text-xs">
+                                                        per serving
+                                                    </div>
+                                                    <div class="product-text-two mt-1">
+                                                        £{{ product.price }}
+                                                    </div>
+                                                {% endif %}
+                                            {% endfor %}
+                                        </div>
+                                        <div class="col-6 my-auto">
+                                            <div class="text-blue text-xs">
+                                                Total price
+                                            </div>
+                                            <div class="product-text-two bold">
+                                                £{{ basket.total_price }}
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <hr>
+                                {% endfor %}
                             </div>
                         </div>
                     </div>
@@ -190,6 +223,13 @@
                             <!-- Pass the client secret to the view so we can get the payment intent id -->
                             <input type="hidden" value="{{ client_secret }}" name="client_secret">
                             <input type="hidden" value="{{ basket_total.total_price__sum|floatformat:'2' }}" name="total_price">
+                            {% if user.is_authenticated %}
+                                <input type="unhidden" value="0" name="delivery_cost">
+                                <input type="unhidden" value="{{ basket_total.total_price__sum|floatformat:'2' }}" name="grand_total">
+                            {% else %}
+                                <input type="unhidden" value="{{ delivery_cost|floatformat:'2' }}" name="delivery_cost">
+                                <input type="unhidden" value="{{ grand_total|floatformat:'2' }}" name="grand_total">
+                            {% endif %}
                             <input type="hidden" value="{{ cookie }}" name="basket_number">
                             <input type="hidden" value="{{ request.user }}" name="current_user">
                         </fieldset>
