--- a/checkout/templates/checkout/order_success.html
+++ b/checkout/templates/checkout/order_success.html
@@ -122,13 +122,33 @@
                                     </div>
                                     <hr>
                                 {% endfor %}
-                                <div class="col-12 col-lg-4 my-auto pl-0">
-                                    <div class="product-text-two mx-auto mb-2 text-blue bold">
-                                        Order Total
-                                    </div>
+                                <div class="my-auto pl-0">
                                     {% for order in orders %}
-                                        <div class="product-text-header bold">
-                                            £{{ order.order_total|floatformat:"2" }}
+                                        <div class="row">
+                                            <div class="col-6 col-sm-4">
+                                                <div class="product-text-two mx-auto mb-2 text-blue bold">
+                                                    Basket <br class="d-none d-sm-block">Total
+                                                </div>
+                                                <div class="product-text-two bold">
+                                                    £{{ order.order_total|floatformat:"2" }}
+                                                </div>
+                                            </div>
+                                            <div class="col-6 col-sm-4">
+                                                <div class="product-text-two mx-auto mb-2 text-lightblue bold">
+                                                    Delivery <br class="d-none d-sm-block">Cost
+                                                </div>
+                                                <div class="product-text-two text-lightblue bold">
+                                                    £{{ order.delivery_cost|floatformat:"2" }}
+                                                </div>
+                                            </div>
+                                            <div class="col-12 col-sm-4 pb-3">
+                                                <div class="product-text-two mx-auto mb-2 text-blue bold">
+                                                    Order <br class="d-none d-sm-block">Total
+                                                </div>
+                                                <div class="product-text-header bold">
+                                                    £{{ order.grand_total|floatformat:"2" }}
+                                                </div>
+                                            </div>
                                         </div>
                                     {% endfor %}
                                 </div>
