--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -17,6 +17,11 @@
                 <h1 class="mx-auto text-uppercase flex-margin-b">BUILD-A-BUFFET</h1>
                 <h2 class="mx-auto flex-margin-b">Handmade selections of delicious food, delivered to your door for: parties, weddings, functions and corporate events.</h2>
                 <a class="masthead-button opaque-100 btn btn-primary js-scroll-trigger flex-margin-b" href="{% url 'bartholemew' %}">Get Started</a>
+                {% if user.is_authenticated %}
+                    <h2 class="mx-auto mt-2 flex-margin-b alertbanner">Remember: as a registered user; you receive free delivery on ALL orders!</h2>
+                {% else %}
+                    <h2 class="mx-auto mt-2 flex-margin-b alertbanner"><a href="{% url 'account_signup' %}">Sign up</a> to receive free delivery on ALL orders!</h2>
+                {% endif %}
             </div>
         </div>
     </header>
