--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -253,7 +253,7 @@
                                 <span class="icon">
                                     <i class="fas fa-exclamation-circle"></i>
                                 </span>
-                                <span>Your card will be charged <strong>£{{ basket_total.total_price__sum|floatformat:"2" }}</strong></span>
+                                <span>Your card will be charged <strong>£{{ grand_total|floatformat:"2" }}</strong></span>
                             </p>
                         </div>
                     </form>
